# fastops

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md
contrib/libs/tclap/: ChangeLog  Makefile.in  aclocal.m4  configure  configure.in
contrib/libs/tclap/config/: Makefile.in
contrib/libs/tclap/docs/: Makefile.am  Makefile.in
contrib/libs/tclap/examples/: Makefile.in  test11.cpp  test12.cpp  test14.cpp  test15.cpp  test16.cpp
contrib/libs/tclap/msc/: Makefile.in
contrib/libs/tclap/msc/examples/: Makefile.in
contrib/libs/tclap/tests/: Makefile.am  Makefile.in  test79.sh
fastops/core/: FastIntrinsics.cpp  FastIntrinsics.h  SIMDFunctions.h  avx_id.cpp
fastops/ut/: fastops_ut.cpp
tools/: CMakeLists.txt
tools/benchmark/: CMakeLists.txt  benchmark.cpp  opts.h  opts_tclap.cpp
tools/eval/: CMakeLists.txt  eval.cpp  opts.h  opts_tclap.cpp
